--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				<a-assets id="VRAssets">
 					<img src="images/brick.jpg" id="brick" />
 					<img src="images/stone.jpg" id="stone" />
-					<img src="images/snow.jpg" id="snow" />
+					<img src="snow.jpg" id="snow" />
 					<img src="images/sky.jpg" id="sky" />
-					<img src="images/landscape.jpg" id="landscape" />
+					<img src="landscape.jpg" id="landscape" />
 					<img src="images/livingRoom-pano.jpg" id="lr" />
 					<img src="images/marina-photosphere-1k.jpg" id="marina1" />
 					<img src="images/marina-photosphere-4k.jpg" id="marina2" />
