--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 
-		<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-		<script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
-		<script language="javascript" type="text/javascript" src="libraries/aframe.min.js"></script>
-		<script language="javascript" type="text/javascript" src="libraries/aframep5.js"></script>
+		<script language="javascript" type="text/javascript" src="p5.js"></script>
+		<script language="javascript" type="text/javascript" src="p5.dom.js"></script>
+		<script language="javascript" type="text/javascript" src="aframe.min.js"></script>
+		<script language="javascript" type="text/javascript" src="aframep5.js"></script>
 
 		<style>
 			body {
