--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 	    <a-scene id="VRScene">
 				<a-assets id="VRAssets">
-					<img src="images/brick.jpg" id="brick" />
-					<img src="images/stone.jpg" id="stone" />
+					<img src="brick.jpg" id="brick" />
+					<img src="stone.jpg" id="stone" />
 					<img src="snow.jpg" id="snow" />
-					<img src="images/sky.jpg" id="sky" />
+					<img src="sky.jpg" id="sky" />
 					<img src="landscape.jpg" id="landscape" />
-					<img src="images/livingRoom-pano.jpg" id="lr" />
-					<img src="images/marina-photosphere-1k.jpg" id="marina1" />
-					<img src="images/marina-photosphere-4k.jpg" id="marina2" />
-					<img src="images/marina-pano4k.jpg" id="marina3" />
+					<img src="livingRoom-pano.jpg" id="lr" />
+					<img src="marina-photosphere-1k.jpg" id="marina1" />
+					<img src="marina-photosphere-4k.jpg" id="marina2" />
+					<img src="marina-pano4k.jpg" id="marina3" />
 					<a-asset id="model" src="images/model.dae"></a-asset>
 				</a-assets>
 
